--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: #78ADC3;
+  --primary: #0078B7;
   --primary-foreground: oklch(0.985 0 0);
   --secondary: #D5F3F3;
   --secondary-foreground: oklch(0.205 0 0);
